--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.7",
     "@react-email/render": "^1.4.0",
@@ -18,9 +19,11 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
+    "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.4.1",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
