--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "node scripts/install-sharp.js || echo 'Sharp install skipped'"
+    "lint": "eslint"
   },
   "engines": {
     "node": "22.x"
@@ -32,6 +31,13 @@
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
+  },
+  "optionalDependencies": {
+    "@img/sharp-linux-x64": "^0.34.4",
+    "@img/sharp-libvips-linux-x64": "^1.0.2"
+  },
+  "overrides": {
+    "sharp": "npm:@img/sharp-linux-x64@^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
