--- a/package.json
+++ b/package.json
@@ -27,17 +27,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.4.1",
-    "sharp": "^0.34.4",
+    "sharp": "npm:@img/sharp-linux-x64@^0.34.4",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
-    "@img/sharp-linux-x64": "^0.34.4",
     "@img/sharp-libvips-linux-x64": "^1.0.2"
-  },
-  "overrides": {
-    "sharp": "npm:@img/sharp-linux-x64@^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
